--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code2Snipped</title>
+  <title>Code2snippet</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <div class="title-content"><h1>Code2Snipped</h1>
+    <div class="title-content"><h1>Code2snippet</h1>
       <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="hosted_button_id" value="EP4D2UKQ6RW7A" />
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
@@ -21,15 +21,15 @@
     <div class="content">
       <div class="form card">
         <h3>Código</h3>
-        <input type="text"  oninput="code2snipped()"placeholder="name" id="name">
-        <input type="text" oninput="code2snipped()"placeholder="prefix" id="prefix">
-        <textarea oninput="code2snipped()"placeholder="description" class="text" id="description" cols="30" rows="10"></textarea>
-        <textarea oninput="code2snipped()"placeholder="Tu código aquí..." class="text" id="text" cols="30" rows="10"></textarea>
+        <input type="text"  oninput="code2snippet()"placeholder="name" id="name">
+        <input type="text" oninput="code2snippet()"placeholder="prefix" id="prefix">
+        <textarea oninput="code2snippet()"placeholder="description" class="text" id="description" cols="30" rows="10"></textarea>
+        <textarea oninput="code2snippet()"placeholder="Tu código aquí..." class="text" id="text" cols="30" rows="10"></textarea>
       </div>
     <div class="change"><i class="fa fa-exchange fa-2x" aria-hidden="true"></i></div>      
     <div class="previewContainer card">
-      <h3>Snipped</h3>
-      <textarea placeholder="El resultado" class="text" id="snipped" cols="30" rows="10"></textarea>
+      <h3>snippet</h3>
+      <textarea placeholder="El resultado" class="text" id="snippet" cols="30" rows="10"></textarea>
       <i class="fa fa-clone" aria-hidden="true" onclick="copy()"></i>
       <i class="fa fa-check" aria-hidden="true">Copied!</i>
     </div>
