se agrega el /t

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="change"><i class="fa fa-exchange fa-2x" aria-hidden="true"></i></div>      
     <div class="previewContainer card">
       <h3>snippet</h3>
-      <textarea placeholder="El resultado" class="text" id="snippet" cols="30" rows="10"></textarea>
+      <textarea oninput="snippet2code"placeholder="El resultado" class="text" id="snippet" cols="30" rows="10"></textarea>
       <i class="fa fa-clone" aria-hidden="true" onclick="copy()"></i>
       <i class="fa fa-check" aria-hidden="true">Copied!</i>
     </div>
